force-app/main/default/objects/NAF__c/NAF__c.object-meta.xml
<CustomObject>
    <description>New Account Form</description>
    <label>NAF</label>
    <nameField>
        <label>NAF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>