force-app/main/default/objects/NAF__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account info</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NAFs</relationshipLabel>
    <relationshipName>NAFs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>