force-app/main/default/objects/NAF__c/fields/Authorized_Brands__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Brands__c</fullName>
    <label>Authorized Brands</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBC</fullName>
            </value>
            <value>
                <fullName>SBC TI</fullName>
            </value>
            <value>
                <fullName>SBUX</fullName>
            </value>
            <value>
                <fullName>SBUX SBC</fullName>
            </value>
            <value>
                <fullName>SBUX SBC TI</fullName>
            </value>
            <value>
                <fullName>SBUX TI</fullName>
            </value>
            <value>
                <fullName>TI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>