force-app/main/default/objects/NAF__c/fields/Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill_to_Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NAFs (Bill_to_Account)</relationshipLabel>
    <relationshipName>NAFs2</relationshipName>
    <type>Lookup</type>
</CustomField>