force-app/main/default/objects/NAF__c/fields/CHEP_ID_NUM__c.field-meta.xml
<CustomField>
    <fullName>CHEP_ID_NUM__c</fullName>
    <inlineHelpText>50 characters or less</inlineHelpText>
    <label>CHEP ID #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>