force-app/main/default/objects/NAF__c/fields/CHEP_Pallet_Accept__c.field-meta.xml
<CustomField>
    <fullName>CHEP_Pallet_Accept__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CHEP Pallet Accept:</label>
    <type>Checkbox</type>
</CustomField>