force-app/main/default/objects/NAF__c/fields/Delivery_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Consolidation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check for delivery consolidation within orders</inlineHelpText>
    <label>Delivery Consolidation</label>
    <type>Checkbox</type>
</CustomField>