force-app/main/default/objects/NAF__c/fields/DUNS_NUM__c.field-meta.xml
<CustomField>
    <fullName>DUNS_NUM__c</fullName>
    <inlineHelpText>100 characters or less</inlineHelpText>
    <label>DUNS #:</label>
    <length>100</length>
    <type>Text</type>
</CustomField>