force-app/main/default/objects/NAF__c/fields/EDI_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>EDI_Contact_Phone__c</fullName>
    <inlineHelpText>100 characters or less</inlineHelpText>
    <label>EDI Contact Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>