force-app/main/default/objects/NAF__c/fields/EDI_Location__c.field-meta.xml
<CustomField>
    <fullName>EDI_Location__c</fullName>
    <inlineHelpText>100 characters or less</inlineHelpText>
    <label>EDI Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>