force-app/main/default/objects/NAF__c/fields/Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>Freight_Terms__c</fullName>
    <label>Freight Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collect</fullName>
            </value>
            <value>
                <fullName>Prepay &amp; Add</fullName>
            </value>
            <value>
                <fullName>Prepay &amp; Add with cost convers</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
            </value>
            <value>
                <fullName>Third Party Billing</fullName>
            </value>
            <value>
                <fullName>To Be Determined</fullName>
            </value>
            <value>
                <fullName>Will Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>