force-app/main/default/objects/NAF__c/fields/Is_commissary__c.field-meta.xml
<CustomField>
    <fullName>Is_commissary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Yes-this location receives orders for multiple stores.</inlineHelpText>
    <label>Is this location a commissary?</label>
    <type>Checkbox</type>
</CustomField>