force-app/main/default/objects/NAF__c/fields/NAF_SUBMITTED__c.field-meta.xml
<CustomField>
    <fullName>NAF_SUBMITTED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NAF submitted</label>
    <type>Checkbox</type>
</CustomField>