force-app/main/default/objects/NAF__c/fields/Ordering_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Contact_Fax__c</fullName>
    <label>Ordering Contact Fax</label>
    <type>Phone</type>
</CustomField>