force-app/main/default/objects/NAF__c/fields/Ordering_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Contact_Name__c</fullName>
    <description>Name of Ordering contact</description>
    <label>Ordering Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>