force-app/main/default/objects/NAF__c/fields/Ordering_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Contact_Phone__c</fullName>
    <label>Ordering Contact Phone:</label>
    <type>Phone</type>
</CustomField>