force-app/main/default/objects/NAF__c/fields/Pack_Level__c.field-meta.xml
<CustomField>
    <fullName>Pack_Level__c</fullName>
    <label>Pack Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>