force-app/main/default/objects/NAF__c/fields/Regional_Distribution_Center__c.field-meta.xml
<CustomField>
    <fullName>Regional_Distribution_Center__c</fullName>
    <label>Regional Distribution Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auburn</fullName>
            </value>
            <value>
                <fullName>Carson</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Nashville</fullName>
            </value>
            <value>
                <fullName>York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>