force-app/main/default/objects/NAF__c/fields/Remaining_Shelf_life_flag__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Shelf_life_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remaining Shelf life flag</label>
    <type>Checkbox</type>
</CustomField>