force-app/main/default/objects/NAF__c/fields/Retain_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Retain_Carrier__c</fullName>
    <label>Retain Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>