force-app/main/default/objects/NAF__c/fields/Ship_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship_to_Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NAFs (Ship_to_Account)</relationshipLabel>
    <relationshipName>NAFs1</relationshipName>
    <type>Lookup</type>
</CustomField>