force-app/main/default/objects/NAF__c/fields/Special_Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Delivery_Instructions__c</fullName>
    <inlineHelpText>up to 255 characters</inlineHelpText>
    <label>Special Delivery Instructions</label>
    <type>TextArea</type>
</CustomField>