force-app/main/default/objects/NAF__c/fields/Use_commissary__c.field-meta.xml
<CustomField>
    <fullName>Use_commissary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If yes-product will be shipped to an alternate location</description>
    <label>Does this store use a commissary?</label>
    <type>Checkbox</type>
</CustomField>